--- a/style.css
+++ b/style.css
@@ -38,6 +38,11 @@ h1{
 
 }
 /* first part suru */
+.profile{
+    height:300px;
+    width: 100%;
+    border-bottom: 5px solid white;
+}
 .dp{
     position: absolute;
     top: 100px;
@@ -104,7 +109,7 @@ h1{
     .dp{
         position: absolute;
         top: 50px;
-        left: 70px;
+        left: 40%;
         height: 50px;
         width: 50px;
         border-radius: 100px;
@@ -112,14 +117,14 @@ h1{
     .name{
         position: absolute;
         top: 100px;
-        left: 58px;
+        left: 35%;
         font-size: 15px;
         color: teal;
     }
     .add{
         position: absolute;
         top: 100px;
-        left: 160px;
+        left: 65%;
         font-size: 10px;
         height: 15px;
         width: 40px;
@@ -128,5 +133,9 @@ h1{
         background-color: rgba(0, 0, 0, 0.842);
         color: whitesmoke;
     }
-
+    .profile{
+        height:14vh;
+        width: 100vh;
+        border-bottom: 4px solid white;
+    }
 }
