--- a/style.css
+++ b/style.css
@@ -71,6 +71,24 @@ h1{
     color: whitesmoke;
 }
 
+/* second part */
+
+.posts{
+    position: relative;
+}
+.my_post{
+    position: absolute;
+    width: 50%;
+    text-align: center;
+}
+.share{
+    position: absolute;
+    width: 50%;
+    text-align: center;
+}
+
+
+
 @media (max-width:1048px){
     nav{
         display: flex;
@@ -135,7 +153,7 @@ h1{
     }
     .profile{
         height:14vh;
-        width: 100vh;
+        width: 100%;
         border-bottom: 4px solid white;
     }
 }
