--- a/style.css
+++ b/style.css
@@ -6,11 +6,13 @@
     font-family: 'Ubuntu', sans-serif;
     text-transform: capitalize;
 }
+
+/* sobar font color color: rgba(0, 0, 0, 0.842); hbe ..only navbar er font color white koris...r ei color tai navbar er r website tar official color hbe  " rgba(0, 0, 0, 0.842); "   */
 body{
     background-color: rgba(217, 243, 255, 0.849)!important;
     color: black !important;
 }
-nav{
+#navbar{
     display: flex;
     /* background-color: rgb(255, 72, 255); */
     background-color: rgba(0, 0, 0, 0.842);
@@ -40,7 +42,7 @@ h1{
 }
 /* first part suru */
 .profile{
-    height:300px;
+    height:320px;
     width: 100%;
     border-bottom: 5px solid white;
 }
@@ -56,33 +58,40 @@ h1{
     position: absolute;
     top: 310px;
     left: 290px;
-    font-size: 30px;
+    font-size: 35px;
     color: teal;
 }
-.add{
+.edit{
     position: absolute;
-    top: 310px;
-    left: 33%;
-    font-size: 35px;
-    height: 40px;
-    width: 70px;
+    top: 250px;
+    left: 50%;
+    font-size: 20px;
     border:2px solid black;
-    border-radius: 40px;
-    background-color: rgba(0, 0, 0, 0.842);
-    color: whitesmoke;
+    border-radius: 4px;
+    background-color: rgba(255, 255, 255, 0.37);
+    color: rgba(0, 0, 0, 0.842);
+}
+.bio{
+    position: absolute;
+    top: 150px;
+    left: 50%;
 }
 
 /* second part */
 
 .posts{
-  display: flex;
+    display: flex;
 }
 .my_post{
+    padding-top: 15px;
     flex-direction: row;
     width: 50%;
+    height: 100vh;
     text-align: center;
+    border-right: 5px solid white;
 }
 .share{
+    padding-top: 15px;
     flex-direction: row;
     width: 50%;
     text-align: center; 
@@ -95,13 +104,11 @@ h1{
 
 
 @media (max-width:1048px){
-    nav{
+    #navbar{
         display: flex;
         background-color: rgba(0, 0, 0, 0.842);
         line-height: 30px;
         width: 100hv;
-        position: sticky;
-        top: 0%;
         position: relative;
     }
     h1{
@@ -132,32 +139,44 @@ h1{
     .dp{
         position: absolute;
         top: 50px;
-        left: 40%;
-        height: 50px;
-        width: 50px;
+        left: 38%;
+        height: 80px;
+        width: 80px;
         border-radius: 100px;
     }
     .name{
         position: absolute;
-        top: 100px;
-        left: 35%;
-        font-size: 15px;
+        top: 130px;
+        left: 38%;
+        font-size: 18px;
         color: teal;
     }
-    .add{
+    .edit{
         position: absolute;
-        top: 100px;
+        top: 180px;
         left: 65%;
         font-size: 10px;
-        height: 15px;
-        width: 40px;
         border:2px solid black;
-        border-radius: 40px;
-        background-color: rgba(0, 0, 0, 0.842);
-        color: whitesmoke;
+        border-radius: 4px;
+        background-color: rgba(255, 255, 255, 0.37);
+        color: rgba(0, 0, 0, 0.842);
+    }
+    .bio{
+        position: absolute;
+        top: 150px;
+        left: 38%;
+    }
+    .bio h2{
+        font-size: 13px;
+    }
+    .bio h3{
+        font-size: 12px;
+    }
+    .bio p{
+        font-size: 10px;
     }
     .profile{
-        height:14vh;
+        height:32vh;
         width: 100%;
         border-bottom: 4px solid white;
     }
